# check-k8s

./: Cargo.toml  Makefile  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_packages.yml  clippy.yml  rust_test.yml
package/: make.sh
package/DEBIAN/: changelog  control  copyright  rules
src/: cli.rs  lib.rs  logging.rs
tests/: test.rs
