[package]
name = "check-k8s"
description = "Kubernetes check things in Nagios-ish-output format."
version = "0.0.2"
edition = "2021"
license = "MPL2.0"
homepage = "https://github.com/yaleman/check-k8s"
repository = "https://github.com/yaleman/check-k8s"


[dependencies]
anyhow = "1.0.100"
kube = { version = "3.0.1", features = ["runtime"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }

serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = { version = "0.1.44", features = ["log"] }
clap = { version = "4.5.56", features = ["derive"] }

[profile.release]
lto = "thin"
# because sccache is nice
incremental = false
